<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_task1"
            android:icon="@drawable/ic_task1"
            android:title="@string/menu_task1" />
        <item
            android:id="@+id/nav_task2"
            android:icon="@drawable/ic_task2"
            android:title="@string/menu_task2" />
        <item
            android:id="@+id/nav_task3"
            android:icon="@drawable/ic_task3"
            android:title="@string/menu_task3" />
        <item
            android:id="@+id/nav_task4"
            android:icon="@drawable/ic_task4"
            android:title="@string/menu_task4" />
        <item
            android:id="@+id/nav_task5"
            android:icon="@drawable/ic_task5"
            android:title="@string/menu_task5" />
    </group>

</menu>
